--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -13,6 +13,7 @@
 }
 
 #googleMaps {
+	top: 310px;
 	width: 500px;
 	height: 380px;
 	position: absolute;
@@ -36,4 +37,12 @@ a:hover {
 	font-style: italic;
 	font-weight: bold;
  	text-decoration: none;
+}
+
+#eventTable {
+	top: 700px;
+	right: 20px;
+	width: 500px;
+	height: 380px;
+	position: absolute;
 }
