--- a/app/views/event.scala.html
+++ b/app/views/event.scala.html
@@ -12,6 +12,7 @@
 	<script src="http://maps.googleapis.com/maps/api/js?"></script>
 	<script>
 		function initialize() {
+		//maps
 			var mapProp = {
 				center:new google.maps.LatLng(51.508742, -0.120850),
 				zoon: 5,
