--- a/app/views/finalRestaurant.scala.html
+++ b/app/views/finalRestaurant.scala.html
@@ -1,3 +1,4 @@
+@import java.util
 @(res:Restaurants)
 
 @main("Cult and Dine") {
@@ -42,14 +43,9 @@
 		<br><br><br><br><br><br>
 	
 		
-	</div>	
-<form method="GET" action=/events>
-                    Startdate: <input type="text" name="dateStart" id=3 action=/events > <br>
-                    Enddate: <input type="text" name="dateEnd" id=4 action=/events > <br>
-                     <a href="@routes.Application.matchRestEvent(res.getName)" ><button type="button" >Search for events</button> </a>
-                </form><br>
+	</div>
 	
 <!-- tabelle für events erstellen! -->
-	<div id= "eventTable"></div>
+<!-- event liste auslesen wie bei selectedEvents.scala.html -->
+	<div id= "eventTable">Hier sollte Ihre Event-Auswahl stehen!</div>
     }
-    
