--- a/app/views/restaurant.scala.html
+++ b/app/views/restaurant.scala.html
@@ -49,7 +49,7 @@
                      <a href="@routes.Application.matchRestEvent(res.getName)" ><button type="button" >Search for events</button> </a>
                 </form><br>
 	
-<!-- tabelle für events erstellen! -->
+<!-- tabelle fï¿½r events erstellen! -->
 	<div id= "eventTable"></div>
     }
     
