changed position of the map

--- a/app/views/event.scala.html
+++ b/app/views/event.scala.html
@@ -40,7 +40,7 @@
 		<br><br><br><br><br><br>
 		</div>
 
-	<div id ="hdf">
+	<div id ="matchingTable">
 		<table class="table">
 			<tr>
 				<th>Restaurant Name</th>
