--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,6 +1,8 @@
  body {
     padding-top: 30px;
     padding-left:20px;
+    background-image: url("Gold-And-White-Glitter-Wallpaper-9.jpg");
+    background-repeat: no-repeat;
     background-color: #F3E1C3;
 	font-family:Calibri;
 	font-size: 14pt;
