--- a/app/views/restaurant.scala.html
+++ b/app/views/restaurant.scala.html
@@ -10,24 +10,19 @@
 		<a href="/home" > <button type="button" class="btn btn-defaut btn-xl">Home</button></a>
 		</div>
 		
-	
-	<!-- key=AIzaSyDVGIonPsFY9X03uVDndvXKmg0xOEuSyHk -->
-	<!-- googleMap code again -->
-	<script src="http://maps.googleapis.com/maps/api/js?"></script> 
-	<script>
-		function initialize() {
-			var mapProp = {
-				center:new google.maps.LatLng(51.508742, -0.120850),
-				zoon: 5,
-				mapTypeId: google.maps.MapTypeId.TERRAIN
-			};
-			var map = new google.maps.Map(document.getElementById("googleMaps"), mapProp);
-		}
-		google.maps.event.addDomListener(window, 'load', initialize);
-	</script>
 </head>
 <body>
-	<div id="googleMaps"></div>
+
+	<!-- key=AIzaSyDVGIonPsFY9X03uVDndvXKmg0xOEuSyHk -->
+	<div id="googleMaps">
+		<iframe
+		  width="600"
+		  height="450"
+		  frameborder="0" style="border:0"
+		  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDVGIonPsFY9X03uVDndvXKmg0xOEuSyHk
+		    &q=Gumpendorferstraße+16,1060+Wien" allowfullscreen>
+		</iframe>
+	</div>
 	<div class = "col-lg-2 col-md-3 col-md-4 col-md-6 col-md-8 col-md-12">
 		  <h1><strong><center> Welcome to Cult and Dine </center> </strong></h1>
                 <h4><center><i><b> We provide the simplest way to dine and see culture in Vienna</b></i></center><h4> 
