--- a/app/views/event.scala.html
+++ b/app/views/event.scala.html
@@ -12,23 +12,17 @@
 		<a href="/home" > <button type="button" class="btn btn-defaut btn-xl">Home</button></a>
 		</div>
 		<!-- key=AIzaSyDVGIonPsFY9X03uVDndvXKmg0xOEuSyHk -->
-		<!-- java script code to insert a nice googleMap thing, doesn't work yet -->
-	<script src="http://maps.googleapis.com/maps/api/js?"></script>
-	<script>
-		function initialize() {
-		//maps
-			var mapProp = {
-				center:new google.maps.LatLng(51.508742, -0.120850),
-				zoon: 5,
-				mapTypeId: google.maps.MapTypeId.TERRAIN
-			};
-			var map = new google.maps.Map(document.getElementById("googleMaps"), mapProp);
-		}
-		google.maps.event.addDomListener(window, 'load', initialize);
-	</script>
 </head>
-<body>
-	<div id="googleMaps"></div>
+<body>	
+	<div id="googleMaps">
+		<iframe
+		  width="600"
+		  height="450"
+		  frameborder="0" style="border:0"
+		  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDVGIonPsFY9X03uVDndvXKmg0xOEuSyHk
+		    &q=Gumpendorferstraße+16,1060+Wien" allowfullscreen>
+		</iframe>
+	</div>
 
 	<div class = "col-lg-2 col-md-3 col-md-4 col-md-6 col-md-8 col-md-12">
 		  <h1><strong><center> Welcome to Cult and Dine </center> </strong></h1>
