--- a/app/views/event.scala.html
+++ b/app/views/event.scala.html
@@ -32,6 +32,7 @@
          <!-- information about the selected event is stated, more information form the XML-File could be stated -->
          Title: @event.getTitle<br>
          Category: @event.getCategory<br>
+         Address: @event.getStreet<br>
 
 
 
