fixed google maps for restaurants; changed the dropdown

--- a/app/views/restaurant.scala.html
+++ b/app/views/restaurant.scala.html
@@ -19,7 +19,7 @@
 		  width="600"
 		  height="450"
 		  frameborder="0" style="border:0"
-		  src=src1 allowfullscreen>
+		  src= https://www.google.com/maps/embed/v1/place?key=AIzaSyDVGIonPsFY9X03uVDndvXKmg0xOEuSyHk&q=MY%20LOCATION@res.getAdress(),1060+Wien allowfullscreen>
 		</iframe>
 	</div>
 	<div class = "col-lg-2 col-md-3 col-md-4 col-md-6 col-md-8 col-md-12">
