--- a/app/views/start.scala.html
+++ b/app/views/start.scala.html
@@ -21,36 +21,29 @@
                 <div id="restaurant">
                 <h4>Search for the restaurants on your Vienna Trip:</h4>
                 
-                <!-- helper for generation a dropdown form -> doesn't work yet -->
-                	@helper.form(routes.Application.filterQuatDatabase) {
-                     <select class="form-control" value="xyz" name="selecti" id="klaus">
-                      <option name="option" value="Mariahilf" type="submit" id="Mariahilf">Mariahilf</option>
-                      <option name="option" value="Landstraße">Landstra&szlig;e</option>
-                      <option name ="option" value="Innere Stadt">Innere Stadt</option>
-                      <option name ="option" value="Josefstadt">Josefstadt</option>
-                      <option name ="option" value="Margarten">Margarten</option>
-                      <option name ="option" value="Ottakring">Ottakring</option>
-                      <option name ="option" value="Neubau">Neubau</option>
-                      <option name ="option" value="Döbling">D&ouml;bling</option>
-                      <option name ="option" value="Alsergrund">Alsergrund</option>
-                      <option name ="option" value="Rudolfsheim-Fünfhaus">Rudolfsheim-F&uuml;nfhaus</option>
-                      <option name ="option" value="Hietzing">Hietzing</option>
-                      <option name ="option" value="Floridsdorf">Floridsdorf</option>
-                      <option name ="option" value="Donaustadt">Donaustadt</option>
-                      <option name ="option" value="Hernals">Hernals</option>
-                      <option name ="option" value="Brigittenau">Brigittenau</option>
-                      <option name ="option" value="Währing">W&auml;hring</option>
-                      <option name ="option" value="Wieden, Freihausviertel">Wieden, Freihausviertel</option>
-                      <option name ="option" value="Wieden">Wieden</option>
-                      <option name ="option" value="Penzing">Penzing</option>
-                      <option name ="option" value="Favoriten">Favoriten</option>
-                      <option name ="option" value="Meidling">Meidling</option>
-                      <option name ="option" value="Leopoldstadt, Wiener Prater">Leopoldstadt, Wiener Prater</option>
-                      <option name ="option" value="Alsergrund">Alsergrund</option>
-                      <option name ="option" value="Liesing">Liesing</option>
-                    </select>
-                    <button type="submit" name="restaurants" action=/restaurants>Search for restaurants</button>
-                    }
+                <a href =@routes.Application.filterQuatDatabase("Mariahilf")>Mariahilf</a><br>
+                <a href =@routes.Application.filterQuatDatabase("Landstraße")>Landstra&szlig;e</a><br>
+                <a href =@routes.Application.filterQuatDatabase("Innere Stadt")>Innere Stadt</a><br>
+                <a href =@routes.Application.filterQuatDatabase("Josefstadt")>Josefstadt</a><br>
+                <a href =@routes.Application.filterQuatDatabase("Margarten")>Margarten</a><br>
+                <a href =@routes.Application.filterQuatDatabase("Ottakring")>Ottakring</a><br>
+                <a href =@routes.Application.filterQuatDatabase("Neubau")>Neubau</a><br>
+                <a href =@routes.Application.filterQuatDatabase("Döbling")>D&ouml;bling</a><br>
+                <a href =@routes.Application.filterQuatDatabase("Alsergrund")>Alsergrund</a><br>
+                <a href =@routes.Application.filterQuatDatabase("Rudolfsheim-Fünfhaus")>Rudolfsheim-F&uuml;nfhaus</a><br>
+                <a href =@routes.Application.filterQuatDatabase("Hietzing")>Hietzing</a><br>
+                <a href =@routes.Application.filterQuatDatabase("Floridsdorf")>Flordidsdorf</a><br>
+                <a href =@routes.Application.filterQuatDatabase("Donaustadt")>Donaustadt</a><br>
+                <a href =@routes.Application.filterQuatDatabase("Hernals")>Hernals</a><br>
+                <a href =@routes.Application.filterQuatDatabase("Brigittenau")>Brigittenau</a><br>
+                <a href =@routes.Application.filterQuatDatabase("Währing")>W&auml;hring</a><br>
+                <a href =@routes.Application.filterQuatDatabase("Wieden, Freihausviertel")>Wieden, Freihausviertel</a><br>
+                <a href =@routes.Application.filterQuatDatabase("Wieden")>Wieden</a><br>
+                <a href =@routes.Application.filterQuatDatabase("Penzing")>Penzing</a><br>
+                <a href =@routes.Application.filterQuatDatabase("Favoriten")>Favoriten</a><br>
+                <a href =@routes.Application.filterQuatDatabase("Meidling")>Meidling</a><br>
+                <a href =@routes.Application.filterQuatDatabase("Leopoldstadt, Wiener Prater")>Leopoldstadt, Wiener Prater</a><br>
+                <a href =@routes.Application.filterQuatDatabase("Liesing")>Liesing</a><br>
                 </div>
                 <br>
             </div>
