change in background

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,7 +1,7 @@
  body {
     padding-top: 30px;
     padding-left:20px;
-    background-image: url("champagne_bubbles_macro_by_evanduril-d632zpptransparent.png");
+    background-image: url("Hintergrund.png");
     background-size: 100% auto;
     background-repeat: repeat -x;
     background-color: #F3E1C3;
