fixed the views

--- a/app/views/event.scala.html
+++ b/app/views/event.scala.html
@@ -19,7 +19,7 @@
 		  width="600"
 		  height="450"
 		  frameborder="0" style="border:0"
-		  src= https://www.google.com/maps/embed/v1/place?key=AIzaSyDVGIonPsFY9X03uVDndvXKmg0xOEuSyHk&q=MY%20LOCATION@event.getStreet(),1060+Wien allowfullscreen>
+		  src= "https://www.google.com/maps/embed/v1/place?key=AIzaSyDVGIonPsFY9X03uVDndvXKmg0xOEuSyHk&q=MY%20LOCATION@event.getStreet(),1060+Wien" allowfullscreen>
 		</iframe>
 	</div>
 
