--- a/app/views/start.scala.html
+++ b/app/views/start.scala.html
@@ -19,31 +19,37 @@
                 </form>
                 </div>
                 <div id="restaurant">
-                <h4>Search for the restaurants on your Vienna Trip:</h4>
+                <h4>Search in Viennas quarters for a perfect restaurant:</h4>
+				<div style="width: 50%; float:left">
+					<a href =@routes.Application.filterQuatDatabase("Mariahilf")>Mariahilf</a><br>
+	                <a href =@routes.Application.filterQuatDatabase("Landstraße")>Landstra&szlig;e</a><br>
+	                <a href =@routes.Application.filterQuatDatabase("Innere Stadt")>Innere Stadt</a><br>
+	                <a href =@routes.Application.filterQuatDatabase("Josefstadt")>Josefstadt</a><br>
+	                <a href =@routes.Application.filterQuatDatabase("Margarten")>Margarten</a><br>
+	                <a href =@routes.Application.filterQuatDatabase("Ottakring")>Ottakring</a><br>
+	                <a href =@routes.Application.filterQuatDatabase("Neubau")>Neubau</a><br>
+	                <a href =@routes.Application.filterQuatDatabase("Döbling")>D&ouml;bling</a><br>
+	                <a href =@routes.Application.filterQuatDatabase("Alsergrund")>Alsergrund</a><br>
+	                <a href =@routes.Application.filterQuatDatabase("Rudolfsheim-Fünfhaus")>Rudolfsheim-F&uuml;nfhaus</a><br>
+	                <a href =@routes.Application.filterQuatDatabase("Hietzing")>Hietzing</a><br>
+					<a href =@routes.Application.filterQuatDatabase("Hernals")>Hernals</a><br>
+				</div>
+				
+				<div style="width: 50%; float:right">
+	                <a href =@routes.Application.filterQuatDatabase("Brigittenau")>Brigittenau</a><br>
+	                <a href =@routes.Application.filterQuatDatabase("Währing")>W&auml;hring</a><br>
+	                <a href =@routes.Application.filterQuatDatabase("Wieden, Freihausviertel")>Wieden, Freihausviertel</a><br>
+	                <a href =@routes.Application.filterQuatDatabase("Wieden")>Wieden</a><br>
+	                <a href =@routes.Application.filterQuatDatabase("Penzing")>Penzing</a><br>
+	                <a href =@routes.Application.filterQuatDatabase("Favoriten")>Favoriten</a><br>
+	                <a href =@routes.Application.filterQuatDatabase("Meidling")>Meidling</a><br>
+	                <a href =@routes.Application.filterQuatDatabase("Leopoldstadt, Wiener Prater")>Leopoldstadt, Wiener Prater</a><br>
+	                <a href =@routes.Application.filterQuatDatabase("Liesing")>Liesing</a><br>
+	                <a href =@routes.Application.filterQuatDatabase("Floridsdorf")>Flordidsdorf</a><br>
+	                <a href =@routes.Application.filterQuatDatabase("Donaustadt")>Donaustadt</a><br>
+				</div>
+               
                 
-                <a href =@routes.Application.filterQuatDatabase("Mariahilf")>Mariahilf</a><br>
-                <a href =@routes.Application.filterQuatDatabase("Landstraße")>Landstra&szlig;e</a><br>
-                <a href =@routes.Application.filterQuatDatabase("Innere Stadt")>Innere Stadt</a><br>
-                <a href =@routes.Application.filterQuatDatabase("Josefstadt")>Josefstadt</a><br>
-                <a href =@routes.Application.filterQuatDatabase("Margarten")>Margarten</a><br>
-                <a href =@routes.Application.filterQuatDatabase("Ottakring")>Ottakring</a><br>
-                <a href =@routes.Application.filterQuatDatabase("Neubau")>Neubau</a><br>
-                <a href =@routes.Application.filterQuatDatabase("Döbling")>D&ouml;bling</a><br>
-                <a href =@routes.Application.filterQuatDatabase("Alsergrund")>Alsergrund</a><br>
-                <a href =@routes.Application.filterQuatDatabase("Rudolfsheim-Fünfhaus")>Rudolfsheim-F&uuml;nfhaus</a><br>
-                <a href =@routes.Application.filterQuatDatabase("Hietzing")>Hietzing</a><br>
-                <a href =@routes.Application.filterQuatDatabase("Floridsdorf")>Flordidsdorf</a><br>
-                <a href =@routes.Application.filterQuatDatabase("Donaustadt")>Donaustadt</a><br>
-                <a href =@routes.Application.filterQuatDatabase("Hernals")>Hernals</a><br>
-                <a href =@routes.Application.filterQuatDatabase("Brigittenau")>Brigittenau</a><br>
-                <a href =@routes.Application.filterQuatDatabase("Währing")>W&auml;hring</a><br>
-                <a href =@routes.Application.filterQuatDatabase("Wieden, Freihausviertel")>Wieden, Freihausviertel</a><br>
-                <a href =@routes.Application.filterQuatDatabase("Wieden")>Wieden</a><br>
-                <a href =@routes.Application.filterQuatDatabase("Penzing")>Penzing</a><br>
-                <a href =@routes.Application.filterQuatDatabase("Favoriten")>Favoriten</a><br>
-                <a href =@routes.Application.filterQuatDatabase("Meidling")>Meidling</a><br>
-                <a href =@routes.Application.filterQuatDatabase("Leopoldstadt, Wiener Prater")>Leopoldstadt, Wiener Prater</a><br>
-                <a href =@routes.Application.filterQuatDatabase("Liesing")>Liesing</a><br>
                 </div>
                 <br>
             </div>
