--- a/app/views/finalRestaurant.scala.html
+++ b/app/views/finalRestaurant.scala.html
@@ -10,54 +10,48 @@
     <div class="btn-group" role="group" aria-label="...">
 		<a href="/home" > <button type="button" class="btn btn-defaut btn-xl">Home</button></a>
 		</div>
-	<script src="http://maps.google.com/maps/api/js?sensor=false"
-			type="text/javascript"></script>
+	<script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
 
 </head>
 <body>
+<div id="map" style="width: 500px; height: 400px; top: 300px; right: 30px; position: absolute; z-index:5"></div>
+	<script type="text/javascript">
+		var lat = [@res.lat];
+		var lng = [@res.lng];
+		var name = [];
+		@for(matchR:Match <-matchRest){
+			lat.push(@matchR.e.lat);
+			lng.push(@matchR.e.lng);
+		}
 
-<div id="map" style="width: 500px; height: 400px;"></div>
 
-<script type="text/javascript">
-    var locations = [
-      ['Vienna Hbf', 48.187195, 16.373490, 1],
+		var map = new google.maps.Map(document.getElementById('map'), {
+		  zoom: 14,
+		  center: new google.maps.LatLng(lat[0], lng[0]),
+		  mapTypeId: google.maps.MapTypeId.ROADMAP
+		});
 
-    ];
+		var infowindow = new google.maps.InfoWindow();
 
-    var map = new google.maps.Map(document.getElementById('map'), {
-      zoom: 10,
-      center: new google.maps.LatLng(@res.getLat(),@res.getLng())
-      mapTypeId: google.maps.MapTypeId.ROADMAP
-    });
+		var marker;
+alert(lat.length);alert(lng.length);
+		for (var i = 0; i < lat.length; i++) {
+		  marker = new google.maps.Marker({
+			position: new google.maps.LatLng(lat[i], lng[i]),
+			map: map
+		  });
+alert(i);
+		   google.maps.event.addListener(marker, 'click', (function(marker, i) {
+			return function() {
+			  infowindow.setContent(name[i]);
+			  infowindow.open(map, marker);
+			}
+		  })(marker, i));
+		}
 
-    var infowindow = new google.maps.InfoWindow();
+	</script>
+</body>
 
-    var marker, i;
-
-    for (i = 0; i < locations.length; i++) {
-      marker = new google.maps.Marker({
-        position: new google.maps.LatLng(locations[i][1], locations[i][2]),
-        map: map
-      });
-
-      google.maps.event.addListener(marker, 'click', (function(marker, i) {
-        return function() {
-          infowindow.setContent(locations[i][0]);
-          infowindow.open(map, marker);
-        }
-      })(marker, i));
-    }
-  </script>
-
-	<div id="googleMaps">
-		<iframe
-		  width="600"
-		  height="450"
-		  frameborder="0" style="border:0"
-		  src= "https://www.google.com/maps/embed/v1/place?key=AIzaSyDVGIonPsFY9X03uVDndvXKmg0xOEuSyHk&q=MY%20LOCATION@res.getAdress(),1060+Wien" allowfullscreen>
-
-		</iframe>
-	</div>
 	<div class = "col-lg-2 col-md-3 col-md-4 col-md-6 col-md-8 col-md-12">
 		  <h1><strong><center> Welcome to Cult and Dine </center> </strong></h1>
                 <h4><center><i><b> We provide the simplest way to dine and see culture in Vienna</b></i></center><h4> 
