--- a/app/views/finalRestaurant.scala.html
+++ b/app/views/finalRestaurant.scala.html
@@ -10,52 +10,17 @@
     <div class="btn-group" role="group" aria-label="...">
 		<a href="/home" > <button type="button" class="btn btn-defaut btn-xl">Home</button></a>
 		</div>
-	<script src="http://maps.google.com/maps/api/js?sensor=false"
-			type="text/javascript"></script>
-
+		
+	
+	<!-- key=AIzaSyDVGIonPsFY9X03uVDndvXKmg0xOEuSyHk -->
 </head>
 <body>
-
-<div id="map" style="width: 500px; height: 400px;"></div>
-
-<script type="text/javascript">
-    var locations = [
-      ['Vienna Hbf', 48.187195, 16.373490, 1],
-
-    ];
-
-    var map = new google.maps.Map(document.getElementById('map'), {
-      zoom: 10,
-      center: new google.maps.LatLng(@res.getLat(),@res.getLng())
-      mapTypeId: google.maps.MapTypeId.ROADMAP
-    });
-
-    var infowindow = new google.maps.InfoWindow();
-
-    var marker, i;
-
-    for (i = 0; i < locations.length; i++) {
-      marker = new google.maps.Marker({
-        position: new google.maps.LatLng(locations[i][1], locations[i][2]),
-        map: map
-      });
-
-      google.maps.event.addListener(marker, 'click', (function(marker, i) {
-        return function() {
-          infowindow.setContent(locations[i][0]);
-          infowindow.open(map, marker);
-        }
-      })(marker, i));
-    }
-  </script>
-
-	<div id="googleMaps">
+		<div id="googleMaps">
 		<iframe
 		  width="600"
 		  height="450"
 		  frameborder="0" style="border:0"
 		  src= "https://www.google.com/maps/embed/v1/place?key=AIzaSyDVGIonPsFY9X03uVDndvXKmg0xOEuSyHk&q=MY%20LOCATION@res.getAdress(),1060+Wien" allowfullscreen>
-
 		</iframe>
 	</div>
 	<div class = "col-lg-2 col-md-3 col-md-4 col-md-6 col-md-8 col-md-12">
@@ -69,7 +34,7 @@
           Priceclass: @res.getPriceClass <br>
           Tel.: @res.getPhoneNumber <br>
           Adress: @res.getAdress
-
+	
 		<br><br><br><br><br><br>
 	
 		
