Revert "fixed writing mistakes"
This reverts commit fec047993950abd0580906e1a12ce0cccb3a6c4e.

--- a/app/views/start.scala.html
+++ b/app/views/start.scala.html
@@ -45,7 +45,7 @@
 	                <a href =@routes.Application.filterQuatDatabase("Meidling")>Meidling</a><br>
 	                <a href =@routes.Application.filterQuatDatabase("Leopoldstadt, Wiener Prater")>Leopoldstadt, Wiener Prater</a><br>
 	                <a href =@routes.Application.filterQuatDatabase("Liesing")>Liesing</a><br>
-	                <a href =@routes.Application.filterQuatDatabase("Floridsdorf")>Floridsdorf</a><br>
+	                <a href =@routes.Application.filterQuatDatabase("Floridsdorf")>Flordidsdorf</a><br>
 	                <a href =@routes.Application.filterQuatDatabase("Donaustadt")>Donaustadt</a><br>
 				</div>
                
